--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,9 @@ jobs:
           python -m pip install --upgrade pip
       - name: Install pipenv
         run: |
-          python -m pip install pipenv
+          python -m pip install pipenv wheel
       - name: Install dependencies
         run: |
           pipenv install --dev
       - name: Run tests with pytest
-        run: pytest 
+        run: pipenv run pytest 
