--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
         run: |
           pipenv install --dev
       - name: Run tests with pytest
-        run: pipenv run pytest 
+        run: pipenv run python -m pytest
