--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,8 +1,11 @@
 build:
     image: latest
 
+sphinx:
+  configuration: docs/source/conf.py
+
 python:
-    version: 3.6
+    version: 3.7
     pip_install: true
     extra_requirements:
         - docs
