--- a/containers/ovs-dbg/Dockerfile
+++ b/containers/ovs-dbg/Dockerfile
@@ -1,9 +1,13 @@
-FROM gcc:10.3 as build
+#Image to run ovs and ovsdb-server for debugging purpuses
+
+FROM quay.io/fedora/fedora:31-x86_64 as build
+
+#RUN dnf -y groupinstall "Development Tools"
+RUN dnf -y install gcc make autoconf automake libtool diffutils file
+RUN dnf -y install libcap-ng-devel openssl-devel libatomic 
 
 ARG OVS_VERSION=v2.15.0
 ADD https://github.com/openvswitch/ovs/archive/${OVS_VERSION}.tar.gz /src/
-
-RUN apt-get update && apt-get install -y libatomic1 gdb
 
 WORKDIR /src
 RUN mkdir -p /src/ovs
@@ -14,22 +18,20 @@ RUN ./boot.sh
 RUN ./configure CFLAGS="-g -O0"
 RUN make && make install
 
-#Comment to debug
-#FROM fedora:33
-#
-#COPY --from=build /usr/local/bin/ovs* /usr/local/bin/
-#COPY --from=build /usr/local/bin/vtep* /usr/local/bin/
-#COPY --from=build /usr/local/sbin/* /usr/local/sbin/
-#COPY --from=build /usr/local/etc/openvswitch /usr/local/etc/openvswitch
-#COPY --from=build /usr/local/share/openvswitch /usr/local/share/openvswitch
-#COPY --from=build /usr/local/lib/lib* /usr/local/lib/
+# Create new layer
+FROM quay.io/fedora/fedora:31-x86_64
 
-#RUN dnf install -y libatomic gdb
+COPY --from=build /usr/local/bin/ovs* /usr/local/bin/
+COPY --from=build /usr/local/bin/vtep* /usr/local/bin/
+COPY --from=build /usr/local/sbin/* /usr/local/sbin/
+COPY --from=build /usr/local/etc/openvswitch /usr/local/etc/openvswitch
+COPY --from=build /usr/local/share/openvswitch /usr/local/share/openvswitch
+COPY --from=build /usr/local/lib/lib* /usr/local/lib/
+
+RUN dnf install -y libatomic openssl gdb
 
 RUN mkdir -p /usr/local/var/run/openvswitch
 
 ADD start.sh /
-
 ENTRYPOINT ["/start.sh"]
-
 
