--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 netaddr = "*"
-click = "*"
+click = ">=8.0.0"
 rich = "*"
 
 [dev-packages]
@@ -13,3 +13,7 @@ sphinx = "*"
 flake8 = "*"
 pytest = "*"
 sphinx-rtd-theme = "*"
+black = "*"
+
+[pipenv]
+allow_prereleases = true
