Add git-based versioning
Let setuptools_scm determine the package version

Signed-off-by: Adrian Moreno <amorenoz@redhat.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,11 @@ testpaths=["tests"]
 
 [build-system]
 requires = [
-    "setuptools>=42",
-    "wheel"
+    "setuptools>=45",
+    "wheel",
+    "setuptools_scm>=6.2",
 ]
+
+[tool.setuptools_scm]
+write_to = "ovs_dbg/_version.py"
+
