format: comply with flake8
Signed-off-by: Adrian Moreno <amorenoz@redhat.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,5 @@ jobs:
         run: pipenv run python -m pytest
       - name: Check format
         run: pipenv run python -m black --check --diff .
+      - name: Run flake8
+        run: find -iname "*.py" | xargs python -m flake8
