containers: Add a developer container
This enables us to use the latest ovn features not available in any
packaged ovn yet.

Signed-off-by: Adrian Moreno <amorenoz@redhat.com>

--- a/k8s/k8s-ofparse.yaml
+++ b/k8s/k8s-ofparse.yaml
@@ -45,7 +45,7 @@ spec:
         path: /var/run/openvswitch
   containers:
   - name: k8s-ofparse
-    image: quay.io/amorenoz/k8s-ofparse
+    image: quay.io/amorenoz/k8s-ofparse-devel
     #imagePullPolicy: Always
     volumeMounts:
       - mountPath: /var/run/openvswitch/
@@ -80,7 +80,7 @@ spec:
             path: /var/run/openvswitch
       containers:
       - name: k8s-ofparse
-        image: quay.io/amorenoz/k8s-ofparse
+        image: quay.io/amorenoz/k8s-ofparse-devel
         #imagePullPolicy: Always
         volumeMounts:
           - mountPath: /var/run/openvswitch/
