k8s-ofparse: Export OVN env vars so for ovn-detrace
Signed-off-by: Adrian Moreno <amorenoz@redhat.com>

--- a/k8s/k8s-ofparse.yaml
+++ b/k8s/k8s-ofparse.yaml
@@ -53,6 +53,10 @@ spec:
     env:
       - name: OVN_RUNDIR
         value: "/var/run/openvswitch"
+      - name: OVN_NB_DB
+        value: "unix:/var/run/openvswitch/ovnnb_db.sock"
+      - name: OVN_SB_DB
+        value: "unix:/var/run/openvswitch/ovnsb_db.sock"
       - name: OVS_RUNDIR
         value: "/var/run/openvswitch"
     command: ["/root/monitor.sh", "start"]
