Dockefile: add support for dpdk netdevs
DPDK netdevs are not registered if DPDK is not initialized so creating
them fails even if we are latter going to override them with the dummy
implementation.

To make them work, just replace them manually on the DB before startup.

Signed-off-by: Adrian Moreno <amorenoz@redhat.com>

--- a/containers/ovs-dbg/Dockerfile
+++ b/containers/ovs-dbg/Dockerfile
@@ -30,7 +30,7 @@ COPY --from=build /usr/local/etc/openvswitch /usr/local/etc/openvswitch
 COPY --from=build /usr/local/share/openvswitch /usr/local/share/openvswitch
 COPY --from=build /usr/local/lib/lib* /usr/local/lib/
 
-RUN dnf install -y libatomic openssl gdb
+RUN dnf install -y libatomic openssl gdb jq
 
 RUN mkdir -p /usr/local/var/run/openvswitch
 
