--- a/containers/ovs-dbg/Dockerfile
+++ b/containers/ovs-dbg/Dockerfile
@@ -30,7 +30,7 @@ COPY --from=build /usr/local/etc/openvswitch /usr/local/etc/openvswitch
 COPY --from=build /usr/local/share/openvswitch /usr/local/share/openvswitch
 COPY --from=build /usr/local/lib/lib* /usr/local/lib/
 
-RUN dnf install -y libatomic openssl gdb jq
+RUN dnf install -y libatomic openssl gdb jq ovn-central
 
 RUN mkdir -p /usr/local/var/run/openvswitch
 
