--- a/.github/workflows/pypi-test.yml
+++ b/.github/workflows/pypi-test.yml
@@ -22,10 +22,11 @@ jobs:
       - name: Install pypa/build
         run: |
           python -m pip install build --user
+      - name: Install vendored ovs
+        run: ./prepare.sh
       - name: Build binary wheel and source tarball
         run: |
           python -m build --sdist --wheel .
-
       - name: Publish distribution to Test PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
