--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,10 +21,11 @@ jobs:
       - name: Install pypa/build
         run: |
           python -m pip install build --user
+      - name: Install vendored ovs
+        run: ./prepare.sh
       - name: Build binary wheel and source tarball
         run: |
           python -m build --sdist --wheel .
-
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
