--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.6', '3.7']
+        python-version: ['3.7', '3.9', '3.11']
     name: Python ${{ matrix.python-version }} build
     steps:
       - uses: actions/checkout@v2
